--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,11 @@
         "type_traits": "cpp",
         "tuple": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "ctime": "cpp",
+        "deque": "cpp",
+        "iomanip": "cpp",
+        "iostream": "cpp",
+        "memory": "cpp"
     }
 }
