--- a/VSCutCalculator/Cpp/Cpp.vcxproj.filters
+++ b/VSCutCalculator/Cpp/Cpp.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="..\..\cpp_cc\cut_calculator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\cpp_cc\test_ops_main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\cpp_cc\cut_calculator.hpp">
