fix numeric combo item sort

--- a/VSCutCalculator/Cpp/Cpp.vcxproj
+++ b/VSCutCalculator/Cpp/Cpp.vcxproj
@@ -131,11 +131,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\cpp_cc\cc_impl.cpp" />
+    <ClCompile Include="..\..\cpp_cc\cut_calculator.cpp" />
+    <ClCompile Include="..\..\cpp_cc\profiler.cpp" />
     <ClCompile Include="..\..\cpp_cc\test_ops_main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\cpp_cc\cut_calculator.hpp" />
+    <ClInclude Include="..\..\cpp_cc\profiler.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
